[package]
name = "rlbot"
version = "0.2.0"
edition = "2018"
authors = ["John Simon <john@whatisaph.one>"]
description = "RLBot bindings for Rust"
documentation = "https://docs.rs/rlbot/"
repository = "https://github.com/whatisaphone/rlbot-rust"
readme = "README-crates-io.md"
keywords = ["rlbot", "rocket-league", "game"]
license = "MIT"

[badges]
travis-ci = { repository = "whatisaphone/rlbot-rust" }

[dependencies]
libloading = "0.5.0"
ratelimit = "0.4.3"
flatbuffers = "0.5.0"
nalgebra = { version = "0.16.8", optional = true }

[dev-dependencies]
nalgebra = "0.16.0"
winapi = { version = "0.3.5", features = ["synchapi"] }
winproc = "0.5.1"

# winproc > failure > backtrace
# There seems to be an incorrect dependency pin somewhere that causes build
# errors. This fixes it.
backtrace = "= 0.3.9"

[features]
default = ["use-nalgebra"]
use-nalgebra = ["nalgebra"]
strict = []
